| Bug #7222 | information_schema: errors in "routines" | ||
|---|---|---|---|
| Submitted: | 13 Dec 2004 1:44 | Modified: | 14 Dec 2004 9:42 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.3-alpha-debug | OS: | Linux (SUSE 9.2) |
| Assigned to: | Sergei Glukhov | CPU Architecture: | Any |
[13 Dec 2004 1:44]
Peter Gulutzan
[14 Dec 2004 9:42]
Sergei Glukhov
Fixed in 5.0 source tree
