Fix bug#7222 information_schema: errors in "routines"